fix spacing in mobile views

--- a/src/assets/css/feature2.css
+++ b/src/assets/css/feature2.css
@@ -94,7 +94,7 @@
     .overlay-feature2 {
       width: 95%;
       padding: 10px;
-      margin-top: 100px;
+      margin-bottom: 100px;
     }
   
     .row {
@@ -121,7 +121,8 @@
     }
   
     .feature2-container {
-      margin-top: 200px;
+      margin-top: 50px;
+      margin-bottom: 100px;
     }
   }
   
